include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

add_executable(
  Tests
  ${CMAKE_CURRENT_SOURCE_DIR}/Model/Source/testBatches.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/Model/Source/Auxiliary.cpp
)

target_include_directories(
    Tests 
  PRIVATE 
    ${CMAKE_CURRENT_SOURCE_DIR}/Model/Include
)

target_link_libraries(
    Tests
  PRIVATE
    Model
    GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(Tests)

